pySAM updates, relative path (not absolute). Note to only use with nrel-pysam 3.0.2

--- a/SAM/Method pySAM SAM.ipynb
+++ b/SAM/Method pySAM SAM.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Written for nrel-pysam 3.0.2\n",
     "import PySAM.Pvsamv1 as PV\n",
     "import PySAM.Grid as Grid\n",
     "import PySAM.Utilityrate5 as UtilityRate\n",
@@ -38,27 +39,7 @@
    "execution_count": 3,
    "id": "f36cf60f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Pvsamv1 object at 0x000002125C33B990> subarray1_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x000002125C33B990> subarray1_slope_azm 0\n",
-      "<Pvsamv1 object at 0x000002125C33B990> subarray2_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x000002125C33B990> subarray2_slope_azm 0\n",
-      "<Pvsamv1 object at 0x000002125C33B990> subarray3_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x000002125C33B990> subarray3_slope_azm 0\n",
-      "<Pvsamv1 object at 0x000002125C33B990> subarray4_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x000002125C33B990> subarray4_slope_azm 0\n",
-      "<Pvsamv1 object at 0x000002125C33B990> ur_enable_billing_demand 0\n",
-      "<Pvsamv1 object at 0x000002125C33B990> ur_billing_demand_minimum 100\n",
-      "<Pvsamv1 object at 0x000002125C33B990> ur_billing_demand_lookback_period 11\n",
-      "<Pvsamv1 object at 0x000002125C33B990> ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]\n",
-      "<Pvsamv1 object at 0x000002125C33B990> ur_dc_billing_demand_periods [[1, 1], [2, 1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for count, module in enumerate([pv, grid, ur, so]):\n",
     "    filetitle= 'Row2PrismBifi_' + file_names[count] + \".json\"\n",
@@ -69,7 +50,7 @@
     "                continue\n",
     "            try:\n",
     "                module.value(k, v)\n",
-    "            except AttributeError:\n",
+    "            except :\n",
     "                # there is an error is setting the value for ppa_escalation\n",
     "                print(module, k, v)"
    ]
@@ -184,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pv.SolarResource.solar_resource_file = r'C:\\Users\\sayala\\Documents\\GitHub\\Studies\\Approaches2BifacialPerformanceMonitoring\\InputFiles\\BEST_SAM_60_Comb_00a.csv'"
+    "pv.SolarResource.solar_resource_file = r'..\\InputFiles\\BEST_SAM_60_Comb_00a.csv'"
    ]
   },
   {
@@ -253,27 +234,7 @@
    "execution_count": 13,
    "id": "7118ab79",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray1_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray1_slope_azm 0\n",
-      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray2_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray2_slope_azm 0\n",
-      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray3_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray3_slope_azm 0\n",
-      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray4_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x000002127F4BE0F0> subarray4_slope_azm 0\n",
-      "<Pvsamv1 object at 0x000002127F4BE0F0> ur_enable_billing_demand 0\n",
-      "<Pvsamv1 object at 0x000002127F4BE0F0> ur_billing_demand_minimum 100\n",
-      "<Pvsamv1 object at 0x000002127F4BE0F0> ur_billing_demand_lookback_period 11\n",
-      "<Pvsamv1 object at 0x000002127F4BE0F0> ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]\n",
-      "<Pvsamv1 object at 0x000002127F4BE0F0> ur_dc_billing_demand_periods [[1, 1], [2, 1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfAll = pd.DataFrame()\n",
     "\n",
@@ -300,7 +261,7 @@
     "                    print(module, k, v)\n",
     "\n",
     "    # Change Weather File here\n",
-    "    pv.SolarResource.solar_resource_file = r'C:\\Users\\sayala\\Documents\\GitHub\\Studies\\Approaches2BifacialPerformanceMonitoring\\InputFiles\\BEST_SAM_60_Comb_00a.csv'\n",
+    "    pv.SolarResource.solar_resource_file = r'..\\InputFiles\\BEST_SAM_60_Comb_00a.csv'\n",
     "                    \n",
     "    grid.SystemOutput.gen = [0] * 8760  # p_out   # let's set all the values to 0\n",
     "    pv.execute()\n",
@@ -377,124 +338,131 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.315377</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>6</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.404365</td>\n",
+       "      <td>0.001799</td>\n",
+       "      <td>0.990000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.439348</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>7</th>\n",
+       "      <td>1.019370</td>\n",
+       "      <td>-14.358429</td>\n",
+       "      <td>0.473111</td>\n",
+       "      <td>11.493652</td>\n",
+       "      <td>0.990000</td>\n",
+       "      <td>15.005641</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.276817</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>8</th>\n",
+       "      <td>7.171574</td>\n",
+       "      <td>-11.558310</td>\n",
+       "      <td>0.613570</td>\n",
+       "      <td>70.495995</td>\n",
+       "      <td>0.941576</td>\n",
+       "      <td>92.201371</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.418236</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>9</th>\n",
+       "      <td>8.865279</td>\n",
+       "      <td>-10.795777</td>\n",
+       "      <td>1.044986</td>\n",
+       "      <td>101.250656</td>\n",
+       "      <td>0.944699</td>\n",
+       "      <td>113.336518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.683536</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>10</th>\n",
+       "      <td>16.720301</td>\n",
+       "      <td>-7.431888</td>\n",
+       "      <td>1.171745</td>\n",
+       "      <td>188.318970</td>\n",
+       "      <td>0.929309</td>\n",
+       "      <td>215.046014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>11</th>\n",
+       "      <td>25.762836</td>\n",
+       "      <td>-3.049886</td>\n",
+       "      <td>28.033949</td>\n",
+       "      <td>256.362061</td>\n",
+       "      <td>0.907453</td>\n",
+       "      <td>332.653447</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8755</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.402267</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>12</th>\n",
+       "      <td>33.645650</td>\n",
+       "      <td>0.603812</td>\n",
+       "      <td>80.301537</td>\n",
+       "      <td>311.692810</td>\n",
+       "      <td>0.899169</td>\n",
+       "      <td>434.720623</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8756</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.277688</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>13</th>\n",
+       "      <td>39.509274</td>\n",
+       "      <td>7.099989</td>\n",
+       "      <td>242.766037</td>\n",
+       "      <td>295.247559</td>\n",
+       "      <td>0.889730</td>\n",
+       "      <td>510.176484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8757</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.247329</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>14</th>\n",
+       "      <td>31.711257</td>\n",
+       "      <td>3.615889</td>\n",
+       "      <td>185.585587</td>\n",
+       "      <td>215.476837</td>\n",
+       "      <td>0.747716</td>\n",
+       "      <td>405.571904</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8758</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.291647</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>15</th>\n",
+       "      <td>28.938494</td>\n",
+       "      <td>4.446259</td>\n",
+       "      <td>406.924988</td>\n",
+       "      <td>98.524948</td>\n",
+       "      <td>0.473237</td>\n",
+       "      <td>370.437548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8759</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.464298</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>16</th>\n",
+       "      <td>2.830165</td>\n",
+       "      <td>-11.108245</td>\n",
+       "      <td>150.958633</td>\n",
+       "      <td>17.766726</td>\n",
+       "      <td>0.481119</td>\n",
+       "      <td>41.372588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.617668</td>\n",
+       "      <td>0.085407</td>\n",
+       "      <td>0.990000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8760 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      sim0_DCP  sim0_Celltemp       DNI  DHI   alb  POA\n",
-       "0          0.0            0.0  0.315377  0.0  0.99  0.0\n",
-       "1          0.0            0.0  0.439348  0.0  0.99  0.0\n",
-       "2          0.0            0.0  0.276817  0.0  0.99  0.0\n",
-       "3          0.0            0.0  0.418236  0.0  0.99  0.0\n",
-       "4          0.0            0.0  0.683536  0.0  0.99  0.0\n",
-       "...        ...            ...       ...  ...   ...  ...\n",
-       "8755       0.0            0.0  0.402267  0.0  0.99  0.0\n",
-       "8756       0.0            0.0  0.277688  0.0  0.99  0.0\n",
-       "8757       0.0            0.0  0.247329  0.0  0.99  0.0\n",
-       "8758       0.0            0.0  0.291647  0.0  0.99  0.0\n",
-       "8759       0.0            0.0  0.464298  0.0  0.99  0.0\n",
-       "\n",
-       "[8760 rows x 6 columns]"
+       "     sim0_DCP  sim0_Celltemp         DNI         DHI       alb         POA\n",
+       "6    0.000000       0.000000    0.404365    0.001799  0.990000    0.000000\n",
+       "7    1.019370     -14.358429    0.473111   11.493652  0.990000   15.005641\n",
+       "8    7.171574     -11.558310    0.613570   70.495995  0.941576   92.201371\n",
+       "9    8.865279     -10.795777    1.044986  101.250656  0.944699  113.336518\n",
+       "10  16.720301      -7.431888    1.171745  188.318970  0.929309  215.046014\n",
+       "11  25.762836      -3.049886   28.033949  256.362061  0.907453  332.653447\n",
+       "12  33.645650       0.603812   80.301537  311.692810  0.899169  434.720623\n",
+       "13  39.509274       7.099989  242.766037  295.247559  0.889730  510.176484\n",
+       "14  31.711257       3.615889  185.585587  215.476837  0.747716  405.571904\n",
+       "15  28.938494       4.446259  406.924988   98.524948  0.473237  370.437548\n",
+       "16   2.830165     -11.108245  150.958633   17.766726  0.481119   41.372588\n",
+       "17   0.000000       0.000000    0.617668    0.085407  0.990000    0.000000"
       ]
      },
      "execution_count": 14,
