--- a/1 - ORGANIZED Generating InputFile Combinations.ipynb
+++ b/1 - ORGANIZED Generating InputFile Combinations.ipynb
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pandas version: 1.5.2\n"
+      "Pandas version: 1.4.4\n"
      ]
     }
    ],
@@ -1908,7 +1908,7 @@
    "source": [
     "#for ii in range(0,len(orga)):\n",
     "ii=1\n",
-    "orga.loc[ii] \n"
+    "orga.loc[ii] "
    ]
   },
   {
@@ -2078,7 +2078,7 @@
     "\n",
     "        elif POABOA == 2:\n",
     "        # Front + Rear IRradiances \n",
-    "            foaPOA = data[POAvarname] + data[BOAvarname]\n",
+    "            fooPOA = data[POAvarname] + data[BOAvarname]\n",
     "        \n",
     "        saveSAM_WeatherFile(timestamps = data.index, \n",
     "                            windspeed = data[windvarname], \n",
@@ -2100,14 +2100,6 @@
     "                            includeminute = False)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3439bb20",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2126,7 +2118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
