Add DAS file output to step 1

--- a/1 - Generating InputFile Combinations.ipynb
+++ b/1 - Generating InputFile Combinations.ipynb
@@ -283,13 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "4ee6f2c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "data2 = data[filterdates].resample('60T', label='left', closed='left').mean().copy()\n",
-    "data3 = data[filterdates].resample('60T', label='right', closed='right').mean().copy()\n"
+    "data3 = data[filterdates].resample('60T', label='right', closed='right').mean().copy()\n",
+    "data4 = data[filterdates].resample('15T', label='right', closed='right').mean().copy()"
    ]
   },
   {
@@ -335,6 +336,37 @@
    ],
    "source": [
     "data2.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e08e29bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Gfront_poa', 'Grear', 'row2wind_speed', 'temp_ambient_FieldAverage',\n",
+      "       'row9_inv', 'row9tmod_1', 'row9tmod_2', 'albedo_down', 'albedo_up',\n",
+      "       'row7RotatingAlbedometer_CM11_Down', 'row7RotatingAlbedometer_CM11_Up'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save data4 field das data row 9 as .csv for consumption by pvcaptest\n",
+    "#data4['Hydra_avg'] = np.average(data4[['Hydra_current_1','Hydra_current_2','Hydra_current_3','Hydra_current_4','Hydra_current_5',\n",
+    "#                                      'Hydra_current_6','Hydra_current_7','Hydra_current_8','Hydra_current_9','Hydra_current_10',\n",
+    "#                                      'Hydra_current_11','Hydra_current_12']])\n",
+    "data4_out = data4[['Gfront','Grear', 'row2wind_speed','temp_ambient_FieldAverage',\n",
+    "              'row9dcp', 'row9tmod_1', 'row9tmod_2', 'sunkitty_GRI_CM22', 'SRRL_GHI', 'row7RotatingAlbedometer_CM11_Down',\n",
+    "              'row7RotatingAlbedometer_CM11_Up']]\n",
+    "data4_out = data4_out.rename(columns={'Gfront':'Gfront_poa','row9dcp':'row9_inv', \n",
+    "                          'sunkitty_GRI_CM22':'albedo_down', 'SRRL_GHI':'albedo_up'})\n",
+    "print(data4_out.columns)\n",
+    "data4_out.to_csv(os.path.join('Analysis','data','Row9_2021-2022_15T.csv'))"
    ]
   },
   {
@@ -972,7 +1004,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -986,7 +1018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
