--- a/1 - ORGANIZED Generating InputFile Combinations.ipynb
+++ b/1 - ORGANIZED Generating InputFile Combinations.ipynb
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pandas version: 1.5.2\n"
+      "Pandas version: 1.4.4\n"
      ]
     }
    ],
@@ -354,7 +354,8 @@
    "source": [
     "filterdates = (data.index >= '2021-06-01')  & (data.index < '2022-06-01') \n",
     "data2 = data[filterdates].copy()\n",
-    "data3 = data[filterdates].resample('60T', label='right', closed='right').mean().copy()"
+    "data3 = data[filterdates].resample('60T', label='right', closed='right').mean().copy()\n",
+    "data_das = data[filterdates].resample('15T', label='right', closed='right').mean().copy()"
    ]
   },
   {
@@ -414,6 +415,45 @@
    ],
    "source": [
     "data2.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "69f364a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Gfront_poa', 'Grear', 'row2wind_speed', 'temp_ambient_FieldAverage',\n",
+      "       'albedo_down', 'albedo_up', 'row7RotatingAlbedometer_CM11_Down',\n",
+      "       'row7RotatingAlbedometer_CM11_Up', 'Hydra_avg', 'power_dc_inv2',\n",
+      "       'row2tmod_1', 'row2tmod_2', 'power_dc_inv4', 'row4tmod_1', 'row4tmod_2',\n",
+      "       'power_dc_inv8', 'row8tmod_1', 'row8tmod_2', 'power_dc_inv9',\n",
+      "       'row9tmod_1', 'row9tmod_2'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save data_das field das data as four .csv files for consumption by pvcaptest\n",
+    "data_das['Hydra_avg'] = np.average(data_das[['Hydra_current_1','Hydra_current_2','Hydra_current_3','Hydra_current_4','Hydra_current_5',\n",
+    "                                      'Hydra_current_6','Hydra_current_7','Hydra_current_8','Hydra_current_9','Hydra_current_10',\n",
+    "                                      'Hydra_current_11','Hydra_current_12']])\n",
+    "data_das_out = data_das[['Gfront','Grear', 'row2wind_speed','temp_ambient_FieldAverage',\n",
+    "                        'sunkitty_GRI_CM22', 'SRRL_GHI', 'row7RotatingAlbedometer_CM11_Down',\n",
+    "                        'row7RotatingAlbedometer_CM11_Up','Hydra_avg',\n",
+    "                        'Yf2','row2tmod_1', 'row2tmod_2', \n",
+    "                         'Yf4','row4tmod_1', 'row4tmod_2', \n",
+    "                         'Yf8','row8tmod_1', 'row8tmod_2', \n",
+    "                         'Yf9', 'row9tmod_1', 'row9tmod_2']]\n",
+    "data_das_out = data_das_out.rename(columns={'Gfront':'Gfront_poa','Yf2':'power_dc_inv2',\n",
+    "                                            'Yf4':'power_dc_inv4','Yf8':'power_dc_inv8','Yf9':'power_dc_inv9', \n",
+    "                          'sunkitty_GRI_CM22':'albedo_down', 'SRRL_GHI':'albedo_up'})\n",
+    "print(data_das_out.columns)\n",
+    "data_das_out.to_csv(os.path.join('Analysis','data','Rows2-9_2021-2022_15T.csv'))"
    ]
   },
   {
@@ -2126,7 +2166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
