Step2 add .csv file saving.  Captest Analysis functional for row 8

--- a/SAM/2 - pySAM by Organized Simulations.ipynb
+++ b/SAM/2 - pySAM by Organized Simulations.ipynb
@@ -18,6 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Written for nrel-pysam 3.0.2\n",
     "import PySAM.Pvsamv1 as PV\n",
     "import PySAM.Grid as Grid\n",
     "import PySAM.Utilityrate5 as UtilityRate\n",
@@ -72,27 +73,7 @@
    "execution_count": 3,
    "id": "8c7ab6d8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Pvsamv1 object at 0x0000027E6422E870> subarray1_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E6422E870> subarray1_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E6422E870> subarray2_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E6422E870> subarray2_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E6422E870> subarray3_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E6422E870> subarray3_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E6422E870> subarray4_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E6422E870> subarray4_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E6422E870> ur_enable_billing_demand 0\n",
-      "<Pvsamv1 object at 0x0000027E6422E870> ur_billing_demand_minimum 100\n",
-      "<Pvsamv1 object at 0x0000027E6422E870> ur_billing_demand_lookback_period 11\n",
-      "<Pvsamv1 object at 0x0000027E6422E870> ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]\n",
-      "<Pvsamv1 object at 0x0000027E6422E870> ur_dc_billing_demand_periods [[1, 1], [2, 1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for count, module in enumerate([pv2, grid2, ur2, so2]):\n",
     "    filetitle= 'Row2PrismBifi' + '_' + file_names[count] + \".json\"\n",
@@ -113,27 +94,7 @@
    "execution_count": 4,
    "id": "f2b9cd7a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Pvsamv1 object at 0x0000027E6410D300> subarray1_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E6410D300> subarray1_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E6410D300> subarray2_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E6410D300> subarray2_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E6410D300> subarray3_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E6410D300> subarray3_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E6410D300> subarray4_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E6410D300> subarray4_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E6410D300> ur_enable_billing_demand 0\n",
-      "<Pvsamv1 object at 0x0000027E6410D300> ur_billing_demand_minimum 100\n",
-      "<Pvsamv1 object at 0x0000027E6410D300> ur_billing_demand_lookback_period 11\n",
-      "<Pvsamv1 object at 0x0000027E6410D300> ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]\n",
-      "<Pvsamv1 object at 0x0000027E6410D300> ur_dc_billing_demand_periods [[1, 1], [2, 1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for count, module in enumerate([pv4, grid4, ur4, so4]):\n",
     "    filetitle= 'Row4LongiBifi' + '_' + file_names[count] + \".json\"\n",
@@ -154,27 +115,7 @@
    "execution_count": 5,
    "id": "3339f1bb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Pvsamv1 object at 0x0000027E6423C300> subarray1_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E6423C300> subarray1_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E6423C300> subarray2_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E6423C300> subarray2_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E6423C300> subarray3_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E6423C300> subarray3_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E6423C300> subarray4_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E6423C300> subarray4_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E6423C300> ur_enable_billing_demand 0\n",
-      "<Pvsamv1 object at 0x0000027E6423C300> ur_billing_demand_minimum 100\n",
-      "<Pvsamv1 object at 0x0000027E6423C300> ur_billing_demand_lookback_period 11\n",
-      "<Pvsamv1 object at 0x0000027E6423C300> ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]\n",
-      "<Pvsamv1 object at 0x0000027E6423C300> ur_dc_billing_demand_periods [[1, 1], [2, 1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for count, module in enumerate([pv8, grid8, ur8, so8]):\n",
     "    filetitle= 'Row8MONOFACIALReference' + '_' + file_names[count] + \".json\"\n",
@@ -195,27 +136,7 @@
    "execution_count": 6,
    "id": "3c0fad65",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Pvsamv1 object at 0x0000027E64242D20> subarray1_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E64242D20> subarray1_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E64242D20> subarray2_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E64242D20> subarray2_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E64242D20> subarray3_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E64242D20> subarray3_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E64242D20> subarray4_slope_tilt 0\n",
-      "<Pvsamv1 object at 0x0000027E64242D20> subarray4_slope_azm 0\n",
-      "<Pvsamv1 object at 0x0000027E64242D20> ur_enable_billing_demand 0\n",
-      "<Pvsamv1 object at 0x0000027E64242D20> ur_billing_demand_minimum 100\n",
-      "<Pvsamv1 object at 0x0000027E64242D20> ur_billing_demand_lookback_period 11\n",
-      "<Pvsamv1 object at 0x0000027E64242D20> ur_billing_demand_lookback_percentages [[60, 0], [60, 0], [60, 0], [60, 0], [60, 0], [95, 1], [95, 1], [95, 1], [95, 1], [60, 0], [60, 0], [60, 0]]\n",
-      "<Pvsamv1 object at 0x0000027E64242D20> ur_dc_billing_demand_periods [[1, 1], [2, 1]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for count, module in enumerate([pv9, grid9, ur9, so9]):\n",
     "    filetitle= 'Row9Sunpreme' + '_' + file_names[count] + \".json\"\n",
@@ -1771,18 +1692,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "7b89988b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "InputFilesFolder = r'C:\\Users\\sayala\\Documents\\GitHub\\Studies\\Approaches2BifacialPerformanceMonitoring\\InputFiles'\n",
-    "ResultsFolder = r'C:\\Users\\sayala\\Documents\\GitHub\\Studies\\Approaches2BifacialPerformanceMonitoring\\SAM\\Results'"
+    "InputFilesFolder = r'..\\InputFiles'\n",
+    "ResultsFolder = r'..\\SAM\\Results'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "7118ab79",
    "metadata": {},
    "outputs": [
@@ -1894,7 +1815,7 @@
     "    ur9.execute()\n",
     "    so9.execute()\n",
     "\n",
-    "    # SAVE RESULTS\n",
+    "    # SAVE RESULTS|\n",
     "    # I usually save 1 all the data for 1 of the simulations, and all the others save just the main ones we need like DCP, temp. and front/rear irradiance.\n",
     "\n",
     "    results = pv2.Outputs.export()\n",
@@ -1940,14 +1861,14 @@
     "    res['Power9']= res['Power9']/system_capacity9 # normalizing by the system_capacity\n",
     "\n",
     "#    res.index = timestamps\n",
-    "\n",
+    "    res.to_csv(savefilevar, float_format='%g')\n",
     "    dfAll = pd.concat([dfAll, res], ignore_index=True, axis=0)\n",
-    "\n"
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "bb5d25a6",
    "metadata": {},
    "outputs": [
@@ -1960,7 +1881,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1971,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "7de4db25",
    "metadata": {},
    "outputs": [],
@@ -3032,7 +2953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
