Change pySAM routine to use pd.readcsv instead of pvlib.iotools.psm3. Rename analysis to SAM00

--- a/SAM/2 - pySAM by Organized Simulations.ipynb
+++ b/SAM/2 - pySAM by Organized Simulations.ipynb
@@ -40,9 +40,19 @@
    "execution_count": 35,
    "id": "24affbfa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9.3\n"
+     ]
+    }
+   ],
    "source": [
-    "import PySAM"
+    "import PySAM\n",
+    "import pvlib\n",
+    "print(pvlib.__version__)"
    ]
   },
   {
@@ -1824,12 +1834,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wftimestamp, meta = pvlib.iotools.read_psm3(os.path.join(InputFilesFolder,'WF_SAM_'+orga.loc[0]['WeatherFile_Name']+'.csv'), map_variables=True)\n",
-    "datelist = list(wftimestamp.index) \n",
-    "months = list(wftimestamp.Month)\n",
-    "years = list(wftimestamp.Month)\n",
-    "days = list(wftimestamp.Month)\n",
-    "hours = list(wftimestamp.Month)\n"
+    "wftimestamp = pd.read_csv(os.path.join(InputFilesFolder,'WF_SAM_'+orga.loc[0]['WeatherFile_Name']+'.csv'), skiprows=2)\n",
+    "datelist = list(pd.to_datetime(wftimestamp.iloc[:,0:4]))\n",
+    "months = list(wftimestamp.iloc[:,1])\n",
+    "years = list(wftimestamp.iloc[:,0])\n",
+    "days = list(wftimestamp.iloc[:,2])\n",
+    "hours = list(wftimestamp.iloc[:,3])\n"
    ]
   },
   {
