--- a/1 - ORGANIZED Generating InputFile Combinations.ipynb
+++ b/1 - ORGANIZED Generating InputFile Combinations.ipynb
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "69f364a1",
    "metadata": {},
    "outputs": [
@@ -439,9 +439,9 @@
    ],
    "source": [
     "# save data_das field das data as four .csv files for consumption by pvcaptest\n",
-    "data_das['Hydra_avg'] = np.average(data_das[['Hydra_current_1','Hydra_current_2','Hydra_current_3','Hydra_current_4','Hydra_current_5',\n",
+    "data_das['Hydra_avg'] = data_das[['Hydra_current_1','Hydra_current_2','Hydra_current_3','Hydra_current_4','Hydra_current_5',\n",
     "                                      'Hydra_current_6','Hydra_current_7','Hydra_current_8','Hydra_current_9','Hydra_current_10',\n",
-    "                                      'Hydra_current_11','Hydra_current_12']])\n",
+    "                                      'Hydra_current_11','Hydra_current_12']].mean(axis=1)\n",
     "data_das_out = data_das[['Gfront','Grear', 'row2wind_speed','temp_ambient_FieldAverage',\n",
     "                        'sunkitty_GRI_CM22', 'SRRL_GHI', 'row7RotatingAlbedometer_CM11_Down',\n",
     "                        'row7RotatingAlbedometer_CM11_Up','Hydra_avg',\n",
