Re-run for 4/26 meeting

--- a/SAM/2 - pySAM by Organized Simulations.ipynb
+++ b/SAM/2 - pySAM by Organized Simulations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "b428daac",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "24affbfa",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "6a8b3959",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "5c8bdc8b",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "f2b9cd7a",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "3339f1bb",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "3c0fad65",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "d64dc141",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        " 0.20000000298023224)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "a8cbe0ea",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "76667209",
    "metadata": {},
    "outputs": [],
@@ -255,23 +255,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "16d61d45",
    "metadata": {},
    "outputs": [],
    "source": [
     "# For unknown reasons, pySAM does not calculate this number and you have to obtain it from the GUI.\n",
-    "# CDELINE:  add 5.38% derate to level-set row 8 (monofacial) to capacity = 1.000 based on SAM00 analysis (Tmod not Tamb).\n",
-    "\n",
-    "system_capacity2 =  72.04280090332031 * (1.0538 + 0.0047) \n",
-    "system_capacity4 = 73.982 * (1.0538 + 0.0047)                  \n",
-    "system_capacity8 = 71.078 * (1.0538 + 0.0047)   \n",
-    "system_capacity9 = 80.089 * (1.0538 + 0.0047) "
+    "# CDELINE:  add 5.85% derate to level-set row 8 (monofacial) to capacity = 1.000 based on SAM00 analysis (Tmod not Tamb).\n",
+    "# CDELINE 4_26_23:  use post-degradation numbers here.  Prism row 2: -2.17%. LONGi row 4: -0.62%. Canadian Row 8: -1.7%. Sunpreme: -7.5% \n",
+    "# set row 8 fudge factor at 1.0405 to null bias error after accounting for -1.7% loss\n",
+    "system_capacity2 =  72.04280090332031 / (1 - 0.0217) * (1.0398) \n",
+    "system_capacity4 = 73.982 / (1 - 0.0062) * (1.0398)                 \n",
+    "system_capacity8 = 71.078 / (1 - 0.017) * (1.0398)   \n",
+    "system_capacity9 = 80.089 / (1 - 0.075) * (1.0398) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "420b45b9",
    "metadata": {},
    "outputs": [
@@ -1765,7 +1766,7 @@
        "[51 rows x 22 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1777,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "7b89988b",
    "metadata": {},
    "outputs": [],
@@ -1788,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "9cbe135c",
    "metadata": {},
    "outputs": [],
@@ -1798,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "c6ab3aa7",
    "metadata": {},
    "outputs": [],
@@ -1813,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "ab765fe9",
    "metadata": {},
    "outputs": [
@@ -1823,7 +1824,7 @@
        "1.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1834,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "63157b1b",
    "metadata": {},
    "outputs": [
@@ -1844,7 +1845,7 @@
        "array([0, 1, 2, 3, 4], dtype=int64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1855,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "7118ab79",
    "metadata": {},
    "outputs": [
@@ -2044,7 +2045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "id": "7de4db25",
    "metadata": {},
    "outputs": [],
