pip collab requirements

--- a/1 - ORGANIZED Generating InputFile Combinations.ipynb
+++ b/1 - ORGANIZED Generating InputFile Combinations.ipynb
@@ -10,6 +10,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "fe95ca47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if running on google colab, uncomment the next line and execute this cell to install the dependencies and prevent \"ModuleNotFoundError\" in later cells:\n",
+    "# !pip install https://raw.githubusercontent.com/shirubana/Approaches2BifacialPerformanceMonitoring/main/requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "28a9256e",
    "metadata": {},
