cloude pickle file

--- a/1 - ORGANIZED Generating InputFile Combinations.ipynb
+++ b/1 - ORGANIZED Generating InputFile Combinations.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# if running on google colab, uncomment the next line and execute this cell to install the dependencies and prevent \"ModuleNotFoundError\" in later cells:\n",
-    "# !pip install https://raw.githubusercontent.com/shirubana/Approaches2BifacialPerformanceMonitoring/main/requirements.txt"
+    "# !pip install -r https://raw.githubusercontent.com/shirubana/Approaches2BifacialPerformanceMonitoring/main/requirements.txt"
    ]
   },
   {
@@ -99,10 +99,16 @@
     }
    ],
    "source": [
-    "try:\n",
-    "    data = pd.read_pickle(os.path.join(fielddataFolder,'DATA_Release.pickle'))\n",
-    "except AttributeError:\n",
-    "    raise Exception('Error: pandas needs to be >= 1.5.0 to read this pickle file')\n",
+    "cloude = False\n",
+    "if cloud:\n",
+    "    import cloudpickle as cp\n",
+    "    from urllib.request import urlopen\n",
+    "    data = cp.load(urlopen(\"https://drive.google.com/file/d/pickled_file\", 'rb'))\n",
+    "else:\n",
+    "    try:\n",
+    "        data = pd.read_pickle(os.path.join(fielddataFolder,'DATA_Release.pickle'))\n",
+    "    except AttributeError:\n",
+    "        raise Exception('Error: pandas needs to be >= 1.5.0 to read this pickle file')\n",
     "        \n",
     "print(\"Clean pickle loaded for Plotting Production Data, # datapoints: \", data.__len__())\n",
     "print(\"Spanning from\", data.index[0], \" to \", data.index[-1])"
